force-app/main/default/objects/Test_Object__c/fields/IsReadyforTest__c.field-meta.xml
<CustomField>
    <fullName>IsReadyforTest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsReadyforTest</label>
    <type>Checkbox</type>
</CustomField>