force-app/main/default/objects/Test_Object__c/fields/IsTestCompleted__c.field-meta.xml
<CustomField>
    <fullName>IsTestCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsTestCompleted</label>
    <type>Checkbox</type>
</CustomField>