force-app/main/default/objects/Test_Object__c/fields/Test_Duration_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Test_Duration_in_Days__c</fullName>
    <label>Test Duration in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>