force-app/main/default/objects/Test_Object__c/recordTypes/Hide_Fields.recordType-meta.xml
<RecordType>
    <fullName>Hide_Fields</fullName>
    <active>true</active>
    <label>Hide Fields</label>
</RecordType>