force-app/main/default/objects/Test_Object__c/recordTypes/Show_all_fields.recordType-meta.xml
<RecordType>
    <fullName>Show_all_fields</fullName>
    <active>true</active>
    <label>Show all fields</label>
</RecordType>