force-app/main/default/objects/Test_Object__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Test_Date__c</columns>
    <columns>IsTestCompleted__c</columns>
    <columns>IsReadyforTest__c</columns>
    <columns>Test_Duration_in_Days__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>